<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Data_CUL" Id="{39f0856f-6fd4-447f-a231-5ec22ac767bb}">
    <Declaration><![CDATA[TYPE ST_Data_CUL :
STRUCT
	userID		:STRING;
	accessLevel	:STRING;
	addDate		:STRING;
	enteredBy	:STRING;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>