<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_ReportInfo" Id="{0b31a9b6-01c6-4ba2-ad2f-daf2b6ae6082}">
    <Declaration><![CDATA[TYPE ST_ReportInfo :
STRUCT
	reportName        : STRING;
    reoportSubName    : STRING;
    reportDate        : STRING;
    systemID          : STRING;
    databaseName      : STRING;
    page              : STRING;
    printedBy         : STRING;
	fileName		  : STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>