<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_DeleteRecipe" Id="{9f4f5e4d-18e4-458b-9ac4-5bf6b1228d63}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_DeleteRecipe
VAR_INPUT
    bExecute      : BOOL; // Trigger (rising edge)
    stFileInfo    : ST_RecipeFileInfo; // Info da receita a deletar
END_VAR
VAR_OUTPUT
    bBusy   : BOOL;
    bDone   : BOOL;
    bError  : BOOL;
    nErrId  : UDINT;
END_VAR
VAR
    iStep         : INT;
    fbFileRename  : FB_FileRename;
    sOldPath      : STRING(256);
    sNewPath      : STRING(256);
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[CASE iStep OF
0:
    IF bExecute THEN
        bBusy := TRUE; bDone := FALSE; bError := FALSE; nErrId := 0;
        // Monta caminhos
        sOldPath := CONCAT('C:/TwinCAT/Recipes/', CONCAT(stFileInfo.sFileName, '.json'));
        sNewPath := CONCAT('C:/TwinCAT/Recipes/_deleted/', CONCAT(stFileInfo.sFileName, '.json'));

        // Executa rename/move
        fbFileRename(
            sNetId := '',
            sOldName := sOldPath,
            sNewName := sNewPath,
            bExecute := TRUE
        );
        iStep := 10;
    END_IF

10:
    fbFileRename(bExecute := FALSE);
    IF NOT fbFileRename.bBusy THEN
        IF fbFileRename.bError THEN
            bError := TRUE;
            nErrId := fbFileRename.nErrId;
            bDone := FALSE;
            bBusy := FALSE;
            iStep := 100;
        ELSE
            bDone := TRUE;
            bBusy := FALSE;
            bError := FALSE;
            iStep := 100;
        END_IF
    END_IF

100:
    IF NOT bExecute THEN
        iStep := 0;
        bDone := FALSE;
        bBusy := FALSE;
        bError := FALSE;
    END_IF
END_CASE]]></ST>
    </Implementation>
    <LineIds Name="FB_DeleteRecipe">
      <LineId Id="25" Count="41" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>